--- a/src/Foundation/MediaSecurity/code/App_Config/Include/Foundation/IPCoop.Foundation.MediaSecurity.config
+++ b/src/Foundation/MediaSecurity/code/App_Config/Include/Foundation/IPCoop.Foundation.MediaSecurity.config
@@ -38,14 +38,15 @@
 
     <!-- Pipeline Configuration -->
     <pipelines>
-      <httpRequestBegin>
+      <!-- Media Stream Pipeline - This is where media requests are actually processed -->
+      <getMediaStream>
         
         <!-- 
           SecureMediaRequestProcessor
-          Intercepts media requests early in the pipeline to enforce authorization.
+          Intercepts media stream requests to enforce authorization BEFORE media is served.
           
           Key behaviors:
-          - Runs BEFORE ItemResolver to prevent caching of secured media
+          - Runs in getMediaStream pipeline (the correct pipeline for media authorization)
           - Checks for Secure Media Folder template in item ancestry
           - Validates RuleName field and user claims (3 methods: full URL, short name, user profile)
           - Returns 401 for unauthenticated users (prompts login)
@@ -53,16 +54,16 @@
           - Bypasses cache for all secured media items
           - Comprehensive logging for troubleshooting
           
-          Position: Before ItemResolver to intercept before Sitecore's standard media handling
+          Position: Early in getMediaStream pipeline before media is retrieved
         -->
         <processor 
-          type="IPCoop.Foundation.MediaSecurity.Pipelines.HttpRequestBegin.SecureMediaRequestProcessor, IPCoop.Foundation.MediaSecurity"
+          type="IPCoop.Foundation.MediaSecurity.Pipelines.GetMediaStream.SecureMediaStreamProcessor, IPCoop.Foundation.MediaSecurity"
           resolve="true"
-          patch:before="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']">
+          patch:before="*[1]">
           <param desc="authorizationService" ref="mediaSecurity/authorizationService" />
         </processor>
         
-      </httpRequestBegin>
+      </getMediaStream>
     </pipelines>
 
     <!-- Dependency Injection Configuration -->
